correção na formatação

--- a/cv.mkd
+++ b/cv.mkd
@@ -10,9 +10,13 @@ Sobre mim
 ---------
 
 Nascimento: 18 de janeiro de 1985. Caratinga – MG
+
 Estado civil: Casado
-Nacionalidade: Brasileira
+
+Nacionalidade: Brasileiro
+
 Email: raphox.araujo@gmail.com
+
 Twitter: @raphox
 
 Objetivos
